samples/_failures_safe/1761208014_a2a7b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4edfc214.c: In function ‘main’:
./samples/SAFE/__tmp_4edfc214.c:181:17: error: expected declaration or statement at end of input
  181 |                 } else if (strcmp(input, "n") == 0 || strcmp(input, "N") == 0) {
      |                 ^
./samples/SAFE/__tmp_4edfc214.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4edfc214.c:181:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4edfc214.c:181:17: error: expected declaration or statement at end of input
